# bl1

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  modal_benchmark.py  modal_doom.py  profile_scale.py
configs/: default.yaml  dishbrain_pong.yaml  wagenaar_calibrated.yaml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: analysis.rst  compat.rst  core.rst  games.rst  index.rst  loop.rst  mea.rst  network.rst  plasticity.rst  validation.rst  visualization.rst
docs/slides/: bl1_overview.tex
notebooks/: 00_quickstart.ipynb  01_neuron_types.py  02_network_bursting.py  02_real_vs_simulated.ipynb  03_pong_learning.py  04_criticality.py
scripts/: analyze_all_datasets.py  benchmark_baselines.py  calibrate_bursting.py  calibrate_bursting_stp.py  dgx_setup.sh  download_datasets.sh  nsg_submit.py  run_validation.sh  train_all_sharf.py  train_culture.py  validate_real_data.py  validate_stability.py
src/bl1/: __init__.py
src/bl1/analysis/: __init__.py  bursts.py  connectivity.py  criticality.py  information.py  metrics.py  pharmacology.py  sensitivity.py
src/bl1/compat/: __init__.py  cl_sdk.py  udp_bridge.py
src/bl1/core/: __init__.py  adex.py  delays.py  hybrid.py  integrator.py  izhikevich.py  jaxley_adapter.py  pallas_ops.py  regularization.py  sparse_ops.py  surrogate.py  synapses.py
src/bl1/games/: __init__.py  doom.py  pong.py
src/bl1/loop/: __init__.py  controller.py  decoding.py  encoding.py  feedback.py
src/bl1/mea/: __init__.py  electrode.py  recording.py  stimulation.py
src/bl1/network/: __init__.py  growth.py  topology.py  types.py
src/bl1/plasticity/: __init__.py  homeostatic.py  stdp.py  stp.py  structural.py
src/bl1/training/: __init__.py  loss.py  trainer.py
src/bl1/validation/: __init__.py  comparison.py  datasets.py  loaders.py
src/bl1/visualization/: __init__.py  _style.py  avalanche.py  bursts.py  mea.py  raster.py  rates.py
tests/: test_3d_culture.py  test_adex.py  test_benchmark.py  test_bursting_calibration.py  test_cl_sdk_compat.py  test_coverage_gaps.py  test_delays.py  test_doom.py  test_feedback.py  test_functional_connectivity.py  test_growth.py  test_homeostatic.py  test_hybrid.py  test_integration.py  test_integrator_delays.py  test_integrator_stp.py  test_integrator_surrogate.py  test_izhikevich.py  test_jaxley_adapter.py  test_loaders.py  test_mea.py  test_mea_hd.py  test_network.py  test_network_coverage.py  test_pallas_ops.py  test_pharmacology.py  test_pong_loop.py  test_sensitivity.py  test_sparse_ops.py  test_stdp.py  test_stp.py  test_structural.py  test_surrogate.py  test_synapses.py  test_synapses_extended.py  test_training.py  test_udp_bridge.py  test_validation.py  test_visualization.py
