[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bl1"
version = "0.1.0"
description = "In-silico cortical culture simulator inspired by DishBrain"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "equinox>=0.11.0",
    "matplotlib>=3.8",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "ipykernel>=6.0",
]
jaxley = [
    "jaxley>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bl1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
